# dilute_polymeric_fluids_memory_effects

./: CMakeLists.txt  LICENSE  README.md
applications/: ns-fp-spherical.cpp  ns-testing.cpp  tf-ns-fp-spherical.cpp  tf-ns-fp-zerovel-convergence.cpp  tf-ns-fp.cpp
data/: donut.mesh  half_channel_ref2.msh  inline-quad3D.mesh  periodic_channel.msh  vortex_street_10.msh
src/: Coefficient.cpp  Coefficient.hpp  FPOperator.cpp  FPOperator.hpp  FokkerPlanckCoefficients.hpp  FokkerPlanckOperator.cpp  FokkerPlanckOperator.hpp  FokkerPlanckSettings.cpp  FokkerPlanckSettings.hpp  FokkerPlanckSolver.cpp  FokkerPlanckSolver.hpp  Setups.hpp  TensorFokkerPlanckOperator.cpp  TensorFokkerPlanckOperator.hpp  TimeFractionalFokkerPlanckSolver.cpp  TimeFractionalFokkerPlanckSolver.hpp  TimeIntegrationSettings.cpp  TimeIntegrationSettings.hpp
